--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   </nav>
   <main id="main">
   <p class="txt-1">Lets</p>
-  <p class="txt-2">ROAM</p>
+  <h1 class="txt-2">ROAM</h1>
 </main>
 
 <script>
 function menuBar() {
-  let menu = document.getElementById("nav-bar", "main");
+  let menu = document.getElementById("nav-bar");
   if (menu.className === "nav") {
     menu.className += " responsive";
   } else {
